# betteruptime-rust

api/: Cargo.toml
api/src/: main.rs  request_inputs.rs  request_outputs.rs
api/src/middleware/: user.rs
api/src/routes/: mod.rs  user.rs  users.rs  website.rs  websites.rs
db/: Cargo.toml
db/migrations/: up.sql
db/src/: config.rs  lib.rs
db/src/models/: user.rs  website.rs
store/: Cargo.toml  diesel.toml
store/migrations/2025-06-10-075643_create_users_and_websites/: up.sql
store/migrations/2025-06-10-104645_create_users_update/: up.sql
store/src/: config.rs  lib.rs  store.rs
